test/end-to-end/compile-errors/record-privacy-a.crow
main void()
	()

private-ctor record -new
	x nat

redundant-private record -new
	-y nat

+internal-ctor record ~new
	x nat

redundant-internal record ~new
	~x nat

+redundant-public record +new
	+x nat

private-mut record mut, +new
	-j mut nat
	k -mut nat
	-l -mut nat
